--- a/zaragoza/Base.lproj/Main.storyboard
+++ b/zaragoza/Base.lproj/Main.storyboard
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -18,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xCG-tZ-FUt">
-                                <rect key="frame" x="20" y="20" width="560" height="580"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="1SY-XC-d6s"/>
@@ -28,10 +27,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xCG-tZ-FUt" secondAttribute="bottom" id="AVO-nj-VPO"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="xCG-tZ-FUt" secondAttribute="trailing" id="Xdg-Pg-afd"/>
-                            <constraint firstItem="xCG-tZ-FUt" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="cDZ-FY-s0z"/>
-                            <constraint firstItem="xCG-tZ-FUt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="mzX-0C-yAJ"/>
+                            <constraint firstItem="xCG-tZ-FUt" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ejA-Hl-X7t"/>
+                            <constraint firstItem="xCG-tZ-FUt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="frR-DD-Qzj"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xCG-tZ-FUt" secondAttribute="bottom" id="jaW-WW-RVW"/>
+                            <constraint firstAttribute="trailing" secondItem="xCG-tZ-FUt" secondAttribute="trailing" id="wul-R1-XOs"/>
                         </constraints>
                     </view>
                     <connections>
