--- a/zaragoza/Base.lproj/Main.storyboard
+++ b/zaragoza/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="etaLabel" destination="5lj-Md-n8w" id="n1R-Il-8Z5"/>
-                                            <outlet property="idLabel" destination="cjH-xN-QAP" id="2mE-DZ-7d4"/>
+                                            <outlet property="identifierLabel" destination="cjH-xN-QAP" id="3gF-dv-Ern"/>
                                             <outlet property="mapImageView" destination="aW0-7Y-2bf" id="lNv-Xu-A8t"/>
                                             <outlet property="nameLabel" destination="h8m-xK-R1e" id="ZFE-aJ-KoX"/>
                                         </connections>
