--- a/zaragoza/Base.lproj/Main.storyboard
+++ b/zaragoza/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
         <!--Zaragoza's bus stops-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ZAOverviewViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZAOverviewViewController" id="BYZ-38-t0r" customClass="ZAOverviewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
