Set header image

--- a/zaragoza/Base.lproj/Main.storyboard
+++ b/zaragoza/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
             </objects>
             <point key="canvasLocation" x="-484" y="356"/>
         </scene>
-        <!--Zaragoza's bus stops-->
+        <!--Overview View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="ZAOverviewViewController" id="BYZ-38-t0r" customClass="ZAOverviewViewController" sceneMemberID="viewController">
@@ -97,7 +97,7 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xCG-tZ-FUt" secondAttribute="bottom" id="p9s-T1-bNg"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Zaragoza's bus stops" id="k2e-S9-xfO"/>
+                    <navigationItem key="navigationItem" id="k2e-S9-xfO"/>
                     <connections>
                         <outlet property="tableView" destination="xCG-tZ-FUt" id="xKc-bP-TJS"/>
                     </connections>
