--- a/zaragoza/Base.lproj/Main.storyboard
+++ b/zaragoza/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <scene sceneID="Rie-rc-Yik">
             <objects>
                 <navigationController id="68W-15-E7M" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IV6-J1-OZb">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="IV6-J1-OZb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.16862745098039217" green="0.20784313725490194" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
